force-app/main/default/objects/Artist_Quote_Relation__c/Artist_Quote_Relation__c.object-meta.xml
<CustomObject>
    <description>A junction object between Artist and Quote, used in reporting to check ho many quotes are sent / accepted for each artist</description>
    <label>Artist Quote Relation</label>
    <nameField>
        <displayFormat>AQR-{0}-{DD}-{MM}-{YYYY}</displayFormat>
        <label>Artist Quote Relation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Artist Quote Relation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>