force-app/main/default/objects/Artist_Quote_Relation__c/fields/Artist__c.field-meta.xml
<CustomField>
    <fullName>Artist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Artist</label>
    <referenceTo>Artist__c</referenceTo>
    <relationshipLabel>Artist Quote Relation</relationshipLabel>
    <relationshipName>Artist_Quote_Relation</relationshipName>
    <type>Lookup</type>
</CustomField>