force-app/main/default/objects/Artist_Quote_Relation__c/fields/Booking_Form__c.field-meta.xml
<CustomField>
    <fullName>Booking_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking Form</label>
    <referenceTo>Booking_Form__c</referenceTo>
    <relationshipLabel>Artist Quote Relation</relationshipLabel>
    <relationshipName>Artist_Quote_Relation</relationshipName>
    <type>Lookup</type>
</CustomField>