force-app/main/default/objects/Artist_Quote_Relation__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Artist Quote Relation</relationshipLabel>
    <relationshipName>Artist_Quote_Relation</relationshipName>
    <type>Lookup</type>
</CustomField>