force-app/main/default/objects/Artist_Quote_Relation__c/fields/Quote_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Quote_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote Accepted</label>
    <type>Checkbox</type>
</CustomField>